<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut android:shortcutId="messages" android:enabled="true" android:icon="@drawable/ic_stat" android:shortcutShortLabel="@string/sc_messages" android:shortcutLongLabel="@string/sc_messages_long">
        <intent android:action="android.intent.action.MAIN" android:targetPackage="com.steamlite.mobile" android:targetClass="com.steamlite.mobile.MainActivity">
            <extra android:name="open" android:value="#tab:msgs" />
        </intent>
    </shortcut>
    <shortcut android:shortcutId="library" android:enabled="true" android:icon="@drawable/ic_stat" android:shortcutShortLabel="@string/sc_library" android:shortcutLongLabel="@string/sc_library_long">
        <intent android:action="android.intent.action.MAIN" android:targetPackage="com.steamlite.mobile" android:targetClass="com.steamlite.mobile.MainActivity">
            <extra android:name="open" android:value="#tab:lib" />
        </intent>
    </shortcut>
    <shortcut android:shortcutId="addfriend" android:enabled="true" android:icon="@drawable/ic_stat" android:shortcutShortLabel="@string/sc_add" android:shortcutLongLabel="@string/sc_add_long">
        <intent android:action="android.intent.action.MAIN" android:targetPackage="com.steamlite.mobile" android:targetClass="com.steamlite.mobile.MainActivity">
            <extra android:name="open" android:value="#addfriend" />
        </intent>
    </shortcut>
</shortcuts>
